Fix z-index bug.

--- a/page/css/homenav.css
+++ b/page/css/homenav.css
@@ -29,7 +29,7 @@
 	left: -5px;
 	height: 110%;
 	width: 105%;
-	z-index: 10000;
+	z-index: 100;
 }
 
 .nav-b1{
